# build

./: .gitignore  Cargo.toml  build-linux.ts  build.rs  build.ts  common.mk  dock.ts  in_docker.rs  in_docker.ts  in_docker_android.rs  in_docker_android.ts  install_java.ts  install_ndk.ts  run.ts  ui-test.rs  ui-test.ts
android/: Dockerfile
ios/: build-lib.rs  build-lib.ts  build-project.rs  build-project.sh  build-project.ts  flight.rs  flight.ts  sim-test.rs  sim-test.ts
scripts/: free_action_runner.rs  free_action_runner.ts  install-deps.ts  profile.rs  profile.ts  swap.ts
shared/: Cargo.toml
shared/src/: config.rs  run.rs
